Prevented horizontal scrolling on mobile, and positioned menu toggler better

--- a/src/app/ui/header/header.component.scss
+++ b/src/app/ui/header/header.component.scss
@@ -23,6 +23,18 @@
     width: 300px;   // Is there a better way to do this?
 }
 
+#navbar-toggle {
+    position: absolute;
+    bottom: 5px;
+    right: 15px;
+}
+
+// Prevent horizontal mobile screen scrolling while menu is out of view
+.overflow-hider {
+    position: absolute;
+    overflow: hidden;
+}
+
 .fa-bars {
     transform: scale(2.2, 1.3);
 }
@@ -43,6 +55,7 @@ li.col-4 {
     outline: none;
     border: none;
 }
+
 
 .toggle-menu-text {
     color: rgb(79, 81, 168);
@@ -122,12 +135,7 @@ li.nav-item {
     transition: right 0.5s ease-out;
     display: block;
     max-width: 80%;
-    
-}
-
-// Initial position out of screen
-#mobile-menu {
-    right: -400px;
+    border-bottom-left-radius: 15px;
 }
 
 button.navbar-toggler.hidden-md-up.pull-right {
